# DocLens_Multimodal_RAG

./: ARCHITECTURE.md  DESIGN.md  HOW_TO_BUILD.md  HOW_TO_OPTIMIZE.md  README.md  resume_doclens.md
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  documents.py  ingest.py
backend/app/core/: bm25_retriever.py  embedder.py  generator.py  hybrid_retriever.py  loader.py  logger.py  query_router.py  query_transform.py  reranker.py  retriever.py  splitter.py  vision.py
backend/app/models/: schemas.py
backend/eval/: evaluate.py  result.json  result_ragas_v2.json  test_dataset.json  test_dataset_v2.json  test_rerank.py
